[tool.poetry]
name = "bus-station"
version = "6.0.1"
description = "A python bus station"
readme = "README.md"
authors = ["DeejayRevok <seryi_one@hotmail.com>"]

[tool.poetry.dependencies]
python = "~=3.10.0"
kombu = "5.2.2"
redis = "4.4.4"
rpyc = "5.0.1"
jsonrpcserver = "^5.0.6"
jsonrpcclient = "^4.0.2"
requests = "^2.27.1"
pypendency = "^0.1.0"
confluent-kafka = "^2.0.2"
freezegun = "^1.2.2"

[tool.poetry.dev-dependencies]
black = "22.1.0"
coverage = "5.3"
flake8 = "3.8.4"
pyre-check = "0.9.18"
tox = "3.20.1"
psycopg2 = "2.9.3"
isort = "5.10.1"
commitizen = "^2.42.1"

[tool.black]
line-length = 120
target-version = ['py310']
exclude = '''
/(
  | \.git
  | \.tox
)/
'''

[tool.isort]
profile = "black"
py_version=310
line_length = 120

[tool.commitizen]
name = "cz_conventional_commits"
version = "6.0.1"
tag_format = "$version"
version_files = [
  "pyproject.toml:version"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
