[tool.poetry]
name = "bus-station"
version = "7.0.0"
description = "A python bus station"
readme = "README.md"
authors = ["DeejayRevok <seryi_one@hotmail.com>"]

[tool.poetry.dependencies]
python = "~=3.10.0"
kombu = "5.2.2"
redis = "4.4.4"
rpyc = "^5.3.1"
jsonrpcserver = "^5.0.9"
jsonrpcclient = "^4.0.3"
requests = "^2.27.1"
confluent-kafka = "^2.1.1"
freezegun = "^1.2.2"

[tool.poetry.dev-dependencies]
black = "22.1.0"
coverage = "5.3"
flake8 = "3.8.4"
pyre-check = "0.9.18"
tox = "3.20.1"
psycopg2 = "2.9.3"
isort = "5.10.1"
commitizen = "3.3.0"

[tool.black]
line-length = 120
target-version = ['py310']
exclude = '''
/(
  | \.git
  | \.tox
)/
'''

[tool.isort]
profile = "black"
py_version=310
line_length = 120

[tool.commitizen]
name = "cz_conventional_commits"
version = "7.0.0"
tag_format = "$version"
version_files = [
  "pyproject.toml:version"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
